sylvia/tests/ui/attributes/payload/invalid_params.stderr
error: Invalid payload parameter.
       = note: Expected [`raw`].
  --> tests/ui/attributes/payload/invalid_params.rs:26:23
   |
26 |         #[sv::payload(invalid)] _param: Option<Binary>,
   |                       ^^^^^^^
